--- a/NodeJS/ProjectBasicInformationalSite/package.json
+++ b/NodeJS/ProjectBasicInformationalSite/package.json
@@ -2,7 +2,7 @@
   "name": "projectbasicinformationalsite",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "devDependencies": {
     "nodemon": "^2.0.19"
   },
